# deep-research-mcp

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  deploy-compose.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: check_syntax.py  deploy.sh  push_workflows.sh  release.sh
src/deep_research/: __init__.py  __main__.py  config.py  filter_policy.py  intent.py  llm_client.py  prompts.py  researcher.py  server.py  streaming.py  types.py
src/deep_research/tools/: __init__.py  crawl_client.py  searxng_client.py
tests/: test_filtering.py  test_llm_factory.py  test_researcher.py  test_searxng_client.py  test_streaming.py  test_tools.py
