[project]
name = "deep-research-mcp"
version = "0.1.1"
description = "MCP-сервер глубокого поиска на базе Vane, SearXNG и Crawl4AI"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
